<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/booking_toolbar"
        android:theme="@style/ToolbarStyle"
        app:title="Check Availability"
        app:titleTextColor="@color/white"
        android:layout_width="match_parent"
        android:background="@color/thembluecolor"

        android:layout_height="wrap_content">



    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">


        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->

            <!--android:layout_height="wrap_content">-->
            <!--<TextView-->
                <!--android:textColor="@color/thembluecolor"-->
                <!--android:textAlignment="center"-->
                <!--android:textSize="20dp"-->
                <!--android:textStyle="bold"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Check Availability"/>-->


        <!--</LinearLayout>-->

        <LinearLayout




            android:layout_marginTop="10dp"
            android:background="@drawable/form_border"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/primarybuttoncolor"
                >
                <TextView
                    android:paddingLeft="5dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:text="Retreat Serviced Apartments"/>
                <TextView
                    android:paddingLeft="5dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:text="Book now"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:gravity="center"

                android:orientation="vertical">


            <TextView
                android:paddingLeft="12dp"

                android:textAlignment="center"
                android:layout_width="match_parent"
                android:text="@string/Arrival"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/arrival_date"
                android:inputType="none"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textIsSelectable="true"
               android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape"
                android:focusable="false"/>
                <TextView
                    android:paddingLeft="12dp"
android:paddingTop="10dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:text="@string/Departure"
                    android:textStyle="bold"

                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/departure_date"
                    android:inputType="none"
                    android:paddingLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:textIsSelectable="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/shape"
                    android:focusable="false"/>

                <TextView
                    android:textStyle="bold"
                android:paddingTop="10dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:text="@string/units"
                android:layout_height="wrap_content"
                />

                <Spinner
                    android:paddingLeft="10dp"
                    android:id="@+id/spinner_unit"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/spinner_style"
                    android:spinnerMode="dropdown"

                    android:layout_width="match_parent"

                    android:layout_height="35dp"></Spinner>

                <TextView
                    android:textStyle="bold"
                    android:paddingTop="10dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:text="@string/person"
                    android:layout_height="wrap_content"
                    />

                <Spinner
                    android:paddingLeft="10dp"
                    android:id="@+id/spinner_person"
                    android:background="@drawable/spinner_style"
                    android:spinnerMode="dropdown"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_height="35dp"></Spinner>


                <Button
                    android:id="@+id/check"

                    android:layout_width="150dp"
                    android:text="Check now"
                    android:padding="10dp"
                    android:layout_marginTop="15dp"
                    android:textColor="#ffffff"
                    android:theme="@style/MyButton"

                    android:layout_height="70dp" />


            </LinearLayout>





        </LinearLayout>










































    </LinearLayout>

    </ScrollView>

</LinearLayout>