<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/roomtype_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:orientation="vertical">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:gravity="center"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView


        android:layout_width="0dp"
        android:layout_weight=".45"
        android:id="@+id/detai_room1"


        android:layout_marginBottom="@dimen/margin_roomtype_cardview"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/Roomtypecardview">

                <ImageView
                    android:scaleType="fitXY"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/penthouse"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">


                <TextView
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/onebedroomexecutive"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/textView" />
            </LinearLayout>




        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_marginBottom="@dimen/margin_roomtype_cardview"

android:layout_weight=".45"
        android:layout_width="0dp"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/Roomtypecardview">

                <ImageView
                    android:scaleType="fitXY"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/threebedroomhimalayaview"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">


                <TextView
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/threebedroomhimalayaview"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/textView2"/>
            </LinearLayout>




        </LinearLayout>

    </android.support.v7.widget.CardView>




</LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView

                    android:layout_width="0dp"
                    android:layout_weight=".45"
                    android:id="@+id/detai_room3"
                    android:paddingRight="10dp"
                    android:layout_marginBottom="@dimen/margin_roomtype_cardview"
                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="100dp">

                            <ImageView
                                android:scaleType="fitXY"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/threebedroomhimalayaview"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_margin="10dp"
                            android:layout_height="wrap_content">


                            <TextView
                                android:textAlignment="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="@string/threebedroomhimalayaview"
                                android:textStyle="bold"
                                android:textSize="20dp"
                                android:layout_marginBottom="5dp"
                                android:id="@+id/textView3" />
                        </LinearLayout>




                    </LinearLayout>

                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight=".45"
                    android:layout_marginBottom="@dimen/margin_roomtype_cardview"


                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/Roomtypecardview">

                            <ImageView
                                android:scaleType="fitXY"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/onebedroomexecutive"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_margin="10dp"
                            android:layout_height="wrap_content">


                            <TextView
                                android:textAlignment="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="@string/onebedroomexecutive"
                                android:textStyle="bold"
                                android:textSize="20dp"
                                android:layout_marginBottom="5dp"
                                android:id="@+id/textView4" />
                        </LinearLayout>




                    </LinearLayout>

                </android.support.v7.widget.CardView>









            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_marginBottom="@dimen/margin_roomtype_cardview"
                    app:cardBackgroundColor="@color/cardview_grey"
android:layout_weight=".45"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/Roomtypecardview">

                            <ImageView
                                android:scaleType="fitXY"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/valueformoney"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:layout_margin="10dp"
                            android:layout_height="wrap_content">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="@string/valueformoney"
                                android:textStyle="bold"
                                android:layout_marginBottom="5dp"
                                android:textSize="20dp"
                                android:id="@+id/textView5" />
                        </LinearLayout>




                    </LinearLayout>

                </android.support.v7.widget.CardView>







            </LinearLayout>






























        </LinearLayout>




    </ScrollView>

</LinearLayout>